chore(java): java 8 support (#90)
* Downgrade language features to java 8
* Adapt plugin dependencies to Java 8